test/cases/compile_errors/stage1/obj/empty_while_loop_body.zig
export fn a() void {
    while(true);
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:16: error: expected block or assignment, found ';'
